# varnish-libvmod-file

./: .gitignore  CONTRIBUTING.rst  INSTALL.rst  LICENSE  Makefile.am  README.rst  configure.ac
pkg/rpm/: pkg  vmod-file.spec
src/: Makefile.am  vmod_file.c  vmod_file.vcc  zero_obj.h
src/tests/: 00basic.vtc  blob.vtc  errors.vtc  get.vtc  info.vtc  path.vtc  synth.vtc  temperature.vtc
